--- a/Giorno1/esercizio2/index2.html
+++ b/Giorno1/esercizio2/index2.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <h1>Esercizio 2</h1>
-    <form id="petform">
+    <form id="petForm">
         <div class="row mb-3">
           <label for="inputName" class="col-sm-2 col-form-label">Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputName">
+            <input type="text" class="form-control" id="inputName" required>
           </div>
         </div>
         <div class="row mb-3">
           <label for="inputOwner" class="col-sm-2 col-form-label">Owner</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputOwner">
+            <input type="text" class="form-control" id="inputOwner" required>
           </div>
         </div>
         
           <div class="row mb-3">
             <label for="inputSpecies" class="col-sm-2 col-form-label">Species</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputSpecies">
+              <input type="text" class="form-control" id="inputSpecies" required>
             </div>
           </div>
           <div class="row mb-3">
             <label for="inputBreed" class="col-sm-2 col-form-label">Breed</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputBreed">
+              <input type="text" class="form-control" id="inputBreed" required>
             </div>
           </div>
        
         <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
-      <ul id="list-group">
+      <ul class="list-group" id="petList">
       </ul>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
